--- a/WindowsUIWalla/ManageWalla/ManageWalla.csproj
+++ b/WindowsUIWalla/ManageWalla/ManageWalla.csproj
@@ -56,7 +56,7 @@
       <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="ShaderEffectLibrary">
-      <HintPath>..\..\..\..\Johan\Walla\effectslib\effectslib\ShaderEffectLibrary\ShaderEffectLibrary\bin\Release\ShaderEffectLibrary.dll</HintPath>
+      <HintPath>..\..\..\..\GUI\Windows\ShaderEffectLibrary\ShaderEffectLibrary.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
