Added log4j and properties

--- a/WindowsUIWalla/ManageWalla/ManageWalla.csproj
+++ b/WindowsUIWalla/ManageWalla/ManageWalla.csproj
@@ -52,6 +52,10 @@
     <StartupObject>ManageWalla.App</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=1.2.9.0, Culture=neutral, PublicKeyToken=b32731d11ce58905">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Johan\Walla\log4net-1.2.11\bin\net\4.0\release\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -59,6 +63,7 @@
       <HintPath>..\..\..\..\GUI\Windows\ShaderEffectLibrary\ShaderEffectLibrary.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Net" />
@@ -148,7 +153,9 @@
     <None Include="WallaSchema\UploadStatusList.xsd" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="ManageWalla.exe.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
