--- a/WindowsUIWalla/ManageWalla/Properties/Settings.settings
+++ b/WindowsUIWalla/ManageWalla/Properties/Settings.settings
@@ -1,7 +1,15 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="uri:settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="ManageWalla.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="WallaWSHostname" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">http://localhost:8081/</Value>
+    </Setting>
+    <Setting Name="WallaAppKey" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">1234567890</Value>
+    </Setting>
+    <Setting Name="WallaWSPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)">WallaWS/v1/</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
