Tags image list now working.

--- a/WindowsUIWalla/ManageWalla/app.config
+++ b/WindowsUIWalla/ManageWalla/app.config
@@ -11,7 +11,7 @@
     <applicationSettings>
         <ManageWalla.Properties.Settings>
             <setting name="WallaWSHostname" serializeAs="String">
-                <value>http://localhost:8081/</value>
+                <value>192.168.0.4</value>
             </setting>
             <setting name="WallaAppKey" serializeAs="String">
                 <value>1234567890</value>
@@ -21,7 +21,10 @@
     <userSettings>
         <ManageWalla.Properties.Settings>
             <setting name="WallaWSPath" serializeAs="String">
-                <value>WallaWS/v1/</value>
+                <value>/WallaWS/v1/</value>
+            </setting>
+            <setting name="WallaWSPort" serializeAs="String">
+                <value>8081</value>
             </setting>
         </ManageWalla.Properties.Settings>
     </userSettings>
