--- a/WindowsUIWalla/ManageWalla/Properties/Settings.settings
+++ b/WindowsUIWalla/ManageWalla/Properties/Settings.settings
@@ -3,13 +3,16 @@
   <Profiles />
   <Settings>
     <Setting Name="WallaWSHostname" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">http://localhost:8081/</Value>
+      <Value Profile="(Default)">192.168.0.4</Value>
     </Setting>
     <Setting Name="WallaAppKey" Type="System.String" Scope="Application">
       <Value Profile="(Default)">1234567890</Value>
     </Setting>
     <Setting Name="WallaWSPath" Type="System.String" Scope="User">
-      <Value Profile="(Default)">WallaWS/v1/</Value>
+      <Value Profile="(Default)">/WallaWS/v1/</Value>
+    </Setting>
+    <Setting Name="WallaWSPort" Type="System.String" Scope="User">
+      <Value Profile="(Default)">8081</Value>
     </Setting>
   </Settings>
 </SettingsFile>
