New structure now with uploads working.

--- a/WindowsUIWalla/ManageWalla/app.config
+++ b/WindowsUIWalla/ManageWalla/app.config
@@ -11,7 +11,7 @@
     <applicationSettings>
         <ManageWalla.Properties.Settings>
             <setting name="WallaWSHostname" serializeAs="String">
-                <value>192.168.0.4</value>
+                <value>localhost</value>
             </setting>
             <setting name="WallaAppKey" serializeAs="String">
                 <value>1234567890</value>
