--- a/WindowsUIWalla/ManageWalla/Properties/Settings.settings
+++ b/WindowsUIWalla/ManageWalla/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="WallaWSHostname" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">192.168.0.4</Value>
+      <Value Profile="(Default)">localhost</Value>
     </Setting>
     <Setting Name="WallaAppKey" Type="System.String" Scope="Application">
       <Value Profile="(Default)">1234567890</Value>
