New gallery UI work

--- a/WindowsUIWalla/ManageWalla/app.config
+++ b/WindowsUIWalla/ManageWalla/app.config
@@ -21,7 +21,7 @@
     <userSettings>
         <ManageWalla.Properties.Settings>
             <setting name="WallaWSPath" serializeAs="String">
-                <value>/WallaWS/v1/</value>
+                <value>/WallaHub/v1/ws/</value>
             </setting>
             <setting name="WallaWSPort" serializeAs="String">
                 <value>8081</value>
