--- a/WindowsUIWalla/ManageWalla/app.config
+++ b/WindowsUIWalla/ManageWalla/app.config
@@ -23,6 +23,9 @@
             <setting name="WallaWSPath" serializeAs="String">
                 <value>/WallaHub/v1/ws/</value>
             </setting>
+            <setting name="WallaWebPath" serializeAs="String">
+              <value>/WallaHub/v1/web/</value>
+            </setting>
             <setting name="WallaWSPort" serializeAs="String">
                 <value>8081</value>
             </setting>
