--- a/WindowsUIWalla/ManageWalla/ManageWalla.exe.config
+++ b/WindowsUIWalla/ManageWalla/ManageWalla.exe.config
@@ -9,9 +9,11 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
 
+  <!--
   <appSettings>
     <add key="UserName" value="simo1n" />
   </appSettings>
+  -->
   
   <log4net>
     <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender" >
@@ -19,9 +21,23 @@
         <conversionPattern value="%date [%thread] %-5level %logger [%ndc] - %message%newline" />
       </layout>
     </appender>
+
+
+    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="walla-log-file.txt" />
+      <appendToFile value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="5MB" />
+      <staticLogFileName value="true" />
+      <layout type="log4net.Layout.SimpleLayout" />
+    </appender>
+
+
     <root>
-      <level value="INFO" />
+      <level value="ALL" />
       <appender-ref ref="ConsoleAppender" />
+      <appender-ref ref="RollingFileAppender" />
     </root>
   </log4net>
 
