--- a/WindowsUIWalla/ManageWalla/app.config
+++ b/WindowsUIWalla/ManageWalla/app.config
@@ -7,7 +7,11 @@
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="ManageWalla.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
+        <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     </configSections>
+  
+  
+  
     <applicationSettings>
         <ManageWalla.Properties.Settings>
             <setting name="WallaWSHostname" serializeAs="String">
@@ -16,19 +20,55 @@
             <setting name="WallaAppKey" serializeAs="String">
                 <value>1234567890</value>
             </setting>
-        </ManageWalla.Properties.Settings>
-    </applicationSettings>
-    <userSettings>
-        <ManageWalla.Properties.Settings>
+            <setting name="WallaWSPort" serializeAs="String">
+                <value>8081</value>
+            </setting>
             <setting name="WallaWSPath" serializeAs="String">
                 <value>/WallaHub/v1/ws/</value>
             </setting>
             <setting name="WallaWebPath" serializeAs="String">
-              <value>/WallaHub/v1/web/</value>
+                <value>/WallaHub/v1/web/</value>
             </setting>
-            <setting name="WallaWSPort" serializeAs="String">
-                <value>8081</value>
+            <setting name="WebServerTest" serializeAs="String">
+                <value>www.google.com</value>
+            </setting>
+        </ManageWalla.Properties.Settings>
+    </applicationSettings>
+    <userSettings>
+        <ManageWalla.Properties.Settings>
+            <setting name="UserName" serializeAs="String">
+                <value>simo1n</value>
+            </setting>
+            <setting name="Password" serializeAs="String">
+                <value>hello123</value>
             </setting>
         </ManageWalla.Properties.Settings>
     </userSettings>
+
+  <log4net>
+    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender" >
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger [%ndc] - %message%newline" />
+      </layout>
+    </appender>
+
+
+    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="walla-log-file.txt" />
+      <appendToFile value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="5MB" />
+      <staticLogFileName value="true" />
+      <layout type="log4net.Layout.SimpleLayout" />
+    </appender>
+
+
+    <root>
+      <level value="ALL" />
+      <appender-ref ref="ConsoleAppender" />
+      <appender-ref ref="RollingFileAppender" />
+    </root>
+  </log4net>
+
 </configuration>
