With local image cache

--- a/WindowsUIWalla/ManageWalla/ManageWalla.csproj
+++ b/WindowsUIWalla/ManageWalla/ManageWalla.csproj
@@ -126,6 +126,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ThumbState.cs" />
     <Compile Include="ProjectDataType\GalleryCategoryModel.cs" />
     <Compile Include="GlobalState.cs" />
     <Compile Include="MainTwo.xaml.cs">
@@ -134,6 +135,7 @@
     <Compile Include="MultiSelectTreeView.cs" />
     <Compile Include="ProjectDataType\GeneralImage.cs" />
     <Compile Include="ProjectDataType\ImageMainViewerList.cs" />
+    <Compile Include="ProjectDataType\ThumbnailCache.cs" />
     <Compile Include="ProjectDataType\UploadStatusListBind.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="WallaDataType\Category.cs" />
@@ -337,6 +339,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Icons\LoadingThumbnail.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\UnavailableThumbnail.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
