--- a/WindowsUIWalla/ManageWalla/app.config
+++ b/WindowsUIWalla/ManageWalla/app.config
@@ -4,10 +4,10 @@
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="ManageWalla.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
+        <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="ManageWalla.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
-        <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     </configSections>
   
   
@@ -16,9 +16,6 @@
         <ManageWalla.Properties.Settings>
             <setting name="WallaWSHostname" serializeAs="String">
                 <value>localhost</value>
-            </setting>
-            <setting name="WallaAppKey" serializeAs="String">
-                <value>1234567890</value>
             </setting>
             <setting name="WallaWSPort" serializeAs="String">
                 <value>8081</value>
@@ -32,18 +29,26 @@
             <setting name="WebServerTest" serializeAs="String">
                 <value>www.google.com</value>
             </setting>
+            <setting name="ThumbCacheSizeMB" serializeAs="String">
+                <value>50</value>
+            </setting>
+            <setting name="MainCopyCacheSizeMB" serializeAs="String">
+                <value>400</value>
+            </setting>
+            <setting name="ImageFetchSize" serializeAs="String">
+                <value>50</value>
+            </setting>
+            <setting name="GlobalStateCacheFileName" serializeAs="String">
+                <value>Walla-LocalGlobalState.db</value>
+            </setting>
+            <setting name="WallaAppKey" serializeAs="String">
+                <value>12345678901234567890</value>
+            </setting>
+            <setting name="ThumbCacheFileName" serializeAs="String">
+                <value>Walla-LocalThumbCache.db</value>
+            </setting>
         </ManageWalla.Properties.Settings>
     </applicationSettings>
-    <userSettings>
-        <ManageWalla.Properties.Settings>
-            <setting name="UserName" serializeAs="String">
-                <value>simo1n</value>
-            </setting>
-            <setting name="Password" serializeAs="String">
-                <value>hello123</value>
-            </setting>
-        </ManageWalla.Properties.Settings>
-    </userSettings>
 
   <log4net>
     <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender" >
@@ -71,4 +76,11 @@
     </root>
   </log4net>
 
+  <userSettings>
+    <ManageWalla.Properties.Settings>
+      <setting name="MainCopyCacheFileName" serializeAs="String">
+        <value>Walla-LocalMainCopyCache.db</value>
+      </setting>
+    </ManageWalla.Properties.Settings>
+  </userSettings>
 </configuration>
